examples/test/testpolicy3111.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3111
  namespace: namespace330
spec:
  podSelector:
    matchLabels:
      key8: value38
      key46: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value39
          key29: value48
      podSelector:
        matchLabels:
          key16: value22
          key6: value34
          key17: value5
